Add finished version of code

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "saratovjs-nextjs-preparation",
-  "version": "0.1.0",
-  "private": true,
+  "name": "saratovjs-nextjs",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "next": "^10.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "swr": "^0.3.7"
   }
 }
